--- a/thesis.css
+++ b/thesis.css
@@ -47,11 +47,20 @@ body {
 
 /* expriene.html */
 .time {
-  position: absolute; 
+  position: absolute;
   top: 30px;
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
+  white-space: pre;
+  font-family: monospace;
+}
+
+.dialogue-box {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  text-align: left;
   white-space: pre;
   font-family: monospace;
 }
